# beads-web

./: .gitignore  CLAUDE.md  MARKDOWN_IMPORT_GUIDE.md  README.md  alembic.ini  beads.md  dev.py  pyproject.toml  run.py  start.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EditableField.jsx  HierarchicalIssueList.jsx  Layout.jsx  NotificationContainer.jsx  NotificationProvider.jsx
frontend/src/pages/: CreateIssue.jsx  IssueDetails.jsx  IssueList.jsx  Journal.jsx  MarkdownImport.jsx  ReadyWork.jsx
frontend/src/utils/: api.js
legacy/: pyproject.toml
legacy/src/beads_web/: __init__.py
legacy/src/beads_web/static/: app.js  style.css
legacy/src/beads_web/templates/: index.html
legacy/static/: app.js  style.css
migrations/versions/: ed1d26e0873a_add_child_order_column_to_dependencies_.py
src/aitrac/: __init__.py  alembic.ini  cli.py  main.py
src/aitrac/algorithms/: __init__.py
src/aitrac/api/: dependencies.py  issues.py  journal.py  markdown_import.py  schemas.py  work.py
src/aitrac/migrations/: env.py
src/aitrac/migrations/versions/: 45ab04d6adfc_add_markdown_id_field_to_issues_table.py  4bfcc158532b_initial_schema.py
src/aitrac/models/: __init__.py  base.py  dependency.py  event.py  issue.py  label.py
src/aitrac/static/: index.html
src/aitrac/storage/: database.py  dependency_service.py  id_generator.py  issue_service.py  markdown_parser.py  migrations.py
src/beads_web/: main.py
templates/: index.html
tests/: conftest.py  test_api_integration.py  test_dependency_service.py  test_id_generation.py  test_issue_service.py  test_lets_continue_protocol.py  test_markdown_parser.py  test_migrations.py  test_server_migration.py
