[project]
name = "beads-web"
version = "0.2.0"
description = "Web interface for beads issue tracker visualization"
authors = [{name = "beads-web", email = "tushar@druta.io"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
]

[project.scripts]
beads-web = "beads_web.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beads_web"]
include = [
  "src/beads_web/static/*",
  "src/beads_web/templates/*"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88